--- a/tabel-perkalian/1.0/index.html
+++ b/tabel-perkalian/1.0/index.html
@@ -42,7 +42,7 @@
         required
       />
 
-      <button type="menu" id="submit" class="submit">Kirim!</button>
+      <button type="menu" id="submit" class="submit">Buat Tabel</button>
     </form>
 
     <!-- Table -->
@@ -56,7 +56,7 @@
       <button class="restart" onclick="document.location.reload()">
         Ulangi
       </button>
-      <button class="print-btn">Print</button>
+      <button class="print-btn">Download</button>
     </div>
 
     <script src="./js/script.js"></script>
