--- a/todo-list/2.0/index.html
+++ b/todo-list/2.0/index.html
@@ -8,8 +8,10 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
@@ -30,7 +32,7 @@
           autocomplete="off"
           autofocus
         />
-        <button>Tambahkan Tugas!</button>
+        <button>Tambah Tugas</button>
       </div>
       <p class="err-input-msg">Silahkan isi tugas terlebih dahulu!</p>
       <!-- ADD TASK end -->
